# Dexter_Robotics

./: .gitignore  README.md  STATE_SYNC_FIXES.md  TRANSFER_SETUP_GUIDE.md
dexter_gripper/: GRIPPER_RAIL_BASE_183.3mf  GRIPPER_RAIL_BASE_183.stl  GRIPPER_SPUR_GEAR_V2.3mf  GRIPPER_SPUR_GEAR_V2.stl  gripper_slider.stl
docs/: IMPLEMENTATION_CHECKLIST.md  TRAJECTORY_EXECUTION_ARCHITECTURE.md  TRAJECTORY_QUALIFICATION_MATRIX.md  UNIFIED_TRAJECTORY_CONTRACT.md
scripts/: bridge_status.sh  convert_trajectory_yaml.py  dexter-control-center.desktop  install_control_center_desktop.sh  launch_control_center.sh  setup_workspace.sh  start_trajectory_bridge.sh  stop_control_center.sh  stop_trajectory_bridge.sh  trajectory_qualification_run.sh  trajectory_smoke_test.sh
src/dexter_arm_control/: CMakeLists.txt
src/dexter_arm_control/config/: controllers.yaml  gripper_controllers.yaml
src/dexter_arm_dashboard/: package.xml  setup.cfg  setup.py
src/dexter_arm_dashboard/config/: launch_commands.yaml  layout_config.yaml
src/dexter_arm_dashboard/dexter_arm_dashboard/: __init__.py  config_loader.py  csv_exporter.py  dashboard.py  dashboard_window.py  data_source_manager.py  hardware_full_system_window.py  kill_process_window.py  launch_terminal_window.py  main.py  process_manager.py  system_monitor_window.py  trajectory_generation_window.py  trajectory_system_window.py  trajectory_visualization_window.py  worker.py
src/dexter_arm_dashboard/launch/: dashboard.launch.py
src/dexter_arm_description/launch/: view_model.launch.py
src/dexter_arm_description/meshes/: base_link.STL  l1l.STL  l1r.STL  l2l.STL  l2r.STL  l3l.STL  l3r.STL  l4l.STL  l4r.STL  l5l.STL  l5r.STL  l6l.STL  l6r.STL  l7l1.STL  l7l2.STL  l7r1.STL  l7r2.STL  left_gripper_base_v2.stl  left_gripper_holder_v2.stl
src/dexter_arm_description/rviz/: model.rviz
src/dexter_arm_description/urdf/: dexter.urdf  dexter_arm.urdf.xacro
src/dexter_arm_gazebo/: CMakeLists.txt  package.xml
src/dexter_arm_gazebo/launch/: gazebo.launch.py  gazebo_bringup.launch.py  gazebo_only.launch.py
src/dexter_arm_gazebo/urdf/: dexter_arm_gazebo.xacro
src/dexter_arm_hardware/: CMakeLists.txt  package.xml
src/dexter_arm_hardware/config/: README.md
src/dexter_arm_hardware/firmware/: esp32_firmware.ino  esp32_firmware_wireless.ino
src/dexter_arm_hardware/hardware/: dexter_hardware.xml  dexter_hardware_interface.cpp  dexter_hardware_interface.hpp
src/dexter_arm_hardware/launch/: hardware_bringup.launch.py
src/dexter_arm_hardware/urdf/: dexter_arm_hardware.xacro
src/dexter_arm_moveit_config/: CMakeLists.txt  package.xml
src/dexter_arm_trajectory_system/dexter_arm_trajectory/: README.md  package.xml  setup.cfg  setup.py
src/dexter_arm_trajectory_system/dexter_arm_trajectory/config/: safety_zones.yaml  trajectory_params.yaml
src/dexter_arm_trajectory_system/dexter_arm_trajectory/dexter_arm_trajectory/: __init__.py  safety_zone.py  shape_trajectory_node.py  tcp_visualizer_node.py  trajectory_manager_node.py  trajectory_teach_gui.py
src/dexter_arm_trajectory_system/dexter_arm_trajectory/launch/: teach_mode.launch.py  trajectory_system.launch.py
src/dexter_arm_trajectory_system/dexter_arm_trajectory/trajectories/: README.md  example_pick_place.yaml
src/dexter_arm_trajectory_system/dexter_arm_trajectory_msgs/: CMakeLists.txt  package.xml
src/dexter_arm_trajectory_system/dexter_arm_trajectory_msgs/msg/: ExecutionProgress.msg
src/dexter_arm_trajectory_system/dexter_arm_trajectory_msgs/srv/: CaptureSegment.srv  CompileTrajectory.srv  GenerateShapeTrajectory.srv  GetStatus.srv  InjectTrajectory.srv  LoadTrajectory.srv  SaveTrajectory.srv
src/dexter_middleware/: README.md  requirements.txt
src/dexter_temp_ui/: README.md  app.js  index.html  shape_generation.html  styles.css
src/dexter_trajectory_generator/: package.xml  setup.cfg  setup.py
src/dexter_trajectory_generator/config/: shape_config.yaml
src/dexter_trajectory_generator/dexter_trajectory_generator/: frenet_serret.py  shape_generator.py  trajectory_node.py
src/dexter_trajectory_generator/launch/: trajectory_node.launch.py
src/dexter_trajectory_generator/lib/dexter_trajectory_generator/: trajectory_node
src/dexter_trajectory_generator/refrence/dexter_arm_control/: package.xml
src/dexter_trajectory_generator/refrence/dexter_arm_control/config/: controllers.yaml
src/dexter_trajectory_generator/refrence/dexter_arm_control/launch/: gripper_mimic.launch.py
src/dexter_trajectory_generator/refrence/dexter_arm_control/scripts/: gripper_mimic_controller.py
src/dexter_trajectory_generator/refrence/dexter_arm_description/: CMakeLists.txt  package.xml
src/dexter_trajectory_generator/refrence/dexter_arm_description/meshes/: base.stl  base1.stl  finger.stl  rail.stl
src/dexter_trajectory_generator/refrence/dexter_arm_description/meshes/collision/: l1r.STL  l2l.STL  l4r.STL
src/dexter_trajectory_generator/refrence/dexter_arm_description/meshes/visual/: l5l.STL
src/dexter_trajectory_generator/refrence/dexter_arm_description/urdf/: dexter_arm.urdf.xacro
src/dexter_trajectory_generator/refrence/dexter_arm_gazebo/launch/: gazebo.launch.py
src/dexter_trajectory_generator/refrence/dexter_arm_gazebo/plugins/: README.md
src/dexter_trajectory_generator/refrence/dexter_arm_gazebo/urdf/: dexter_arm_gazebo.xacro
src/dexter_trajectory_generator/refrence/dexter_arm_moveit_config/config/: chomp_planning.yaml  dexter_arm.srdf  dexter_arm.urdf.xacro  fake_controllers.yaml  initial_positions.yaml  kinematics.yaml  moveit_cpp.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  trajectory_view.rviz
src/dexter_trajectory_generator/refrence/dexter_arm_moveit_config/launch/: demo.launch.py
src/dexter_trajectory_generator/src/: README.md  bridge_server.py  dexter_workspace.html
system_design/: STACK_LOCK.md  planning_v1.md  web_native_remote_migration_plan.md
system_design/phases/: PHASE1_RVIZ_ONLY.md  PHASE2_RVIZ_MOVEIT.md  PHASE3_TRACK1_GAZEBO_ONLY.md  PHASE3_TRACK2_FULL_STACK.md  PHASE4_REAL_HARDWARE.md
(+73 files in other folders)
