<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexter_trajectory_generator</name>
  <version>1.0.0</version>
  <description>
    Shape-based Cartesian trajectory generator for Dexter dual-arm robot.
    Generates Frenet-Serret poses from parametric shapes, calls MoveIt2
    computeCartesianPath, time-parameterizes the result, and saves a
    trajectory YAML matching the teach-and-repeat format.
  </description>

  <maintainer email="raj@dexter.local">Raj</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
