<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexter_arm_control</name>
  <version>1.0.0</version>
  <description>Hardware interface and controller configuration for the Dexter dual-arm manipulator (BASE system)</description>
  
  <maintainer email="user@example.com">Dexter Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies for hardware interface -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Runtime dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>dexter_arm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
